4.1 regression: Artifacts in video output caused by threaded YUV conversion #120077
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#120077
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Arch Linux
Graphics card: AMD RX480
Blender Version
Broken: 4.1
Worked: 4.0.2
Caused by
422dd9404f
Short description of error
Rendering of a mp4 produces artifacts to the very left of the video produced. See attached image with the artifacts ringed in white. They appear as grey lines.
Using View Animation after rendering shows that there is some glitching going on throughout the very left of the viewport.
Exact steps for others to reproduce the error
Open attached .blend file and render animation.
Can you attach simple example file?
Please find attached a stripped down version of the blend file I was using. It demonstrates the issue once the animation is rendered with the settings as set.
Some more information:
[imbjr@pc ~]$ pacman -Qi ffmpeg
Name : ffmpeg
Version : 2:6.1.1-7
Build Date : Mon 18 Mar 2024 15:48:35 GMT
Install Date : Fri 22 Mar 2024 07:07:54 GMT
[imbjr@pc ~]$ pacman -Qi blender
Name : blender
Version : 17:4.1.0-1
Build Date : Tue 26 Mar 2024 16:08:37 GMT
Install Date : Thu 28 Mar 2024 17:23:12 GMT
I've re-rendered an animation I made 5 days ago and it now shows the artifacts as well.
Seems to work fine for me. Whether I'm viewing it through "View Animation" or any player.
Could it be a problem in Linux?
@lichtwerk, can you check on Linux?
@IMBJR-3 It seems like you installed Blender through your package manager. If this is the case, can you try downloading and testing the official Blender foundation version from: https://www.blender.org/download
Sometimes there are bugs specific to versions compiled by other people.
Note for others. I just tested Linux, and I couldn't reproduce the issue here.
I've downloaded the official Linux version and the render artifacts are there too. See attached.
I can reproduce this with all players pretty much. Will check older versions and bisect.
Rendering artifacts in video outputto Regression: Artifacts in video outputCC @aras_p. Just a note, that I will be unavailable for next 2 weeks, so won't be able to review fix
Regression: Artifacts in video outputto 4.1 regression: Artifacts in video output caused by threaded YUV conversion